--- a/Pipfile
+++ b/Pipfile
@@ -3,12 +3,19 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://download.pytorch.org/whl/"
+verify_ssl = true
+name = "downloadpytorch"
+
 [packages]
 numpy = "*"
 matplotlib = "*"
 scipy = "*"
 pygambit = "*"
 cvxpy = "*"
+torch = {version = "==2.0.1+cu117", index = "downloadpytorch"}
+tensorboard = "*"
 
 [dev-packages]
 
