--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pygambit = "*"
 cvxpy = "*"
 torch = {version = "==2.0.1+cu117", index = "downloadpytorch"}
 tensorboard = "*"
+cloudpickle = "*"
 
 [dev-packages]
 
